--- a/test/visual/button-group.html
+++ b/test/visual/button-group.html
@@ -264,6 +264,45 @@
         </div>
     </div>
 
+    <h2>Button group inside container</h2>
+    <div class="bg-light overflow-hidden mb-1">
+        <p>input first</p>
+
+        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            <div class="btn-check">
+                <input type="radio" class="btn-check-input" name="ra" id="ra1">
+                <label class="btn btn-outline-primary" for="ra1">Radio 1</label>
+            </div>
+            <div class="btn-check">
+                <input type="radio" class="btn-check-input" name="ra" id="ra2">
+                <label class="btn btn-outline-primary" for="ra2">Radio 2</label>
+            </div>
+            <div class="btn-check">
+                <input type="radio" class="btn-check-input" name="ra" id="ra3">
+                <label class="btn btn-outline-primary" for="ra3">Radio 3</label>
+            </div>
+        </div>
+    </div>
+
+    <div class="bg-light overflow-hidden mb-1">
+        <p>label first</p>
+
+        <div class="btn-group" role="group" aria-label="Basic radio toggle button group">
+            <div class="btn-check">
+                <label class="btn btn-outline-primary" for="rb1">Radio 1</label>
+                <input type="radio" class="btn-check-input" name="rb" id="rb1">
+            </div>
+            <div class="btn-check">
+                <label class="btn btn-outline-primary" for="rb2">Radio 2</label>
+                <input type="radio" class="btn-check-input" name="rb" id="rb2" checked>
+            </div>
+            <div class="btn-check">
+                <label class="btn btn-outline-primary" for="rb3">Radio 3</label>
+                <input type="radio" class="btn-check-input" name="rb" id="rb3">
+            </div>
+        </div>
+    </div>
+
 </div>
 
 </body>
