Navbar: Fix `.navbar-collapse` sizing, replace `.form-inline` in examples

--- a/site/4.3/examples/navbar-fixed-bottom/index.html
+++ b/site/4.3/examples/navbar-fixed-bottom/index.html
@@ -46,7 +46,7 @@ body {
                 <a class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropup<span class="caretup ms-0_25" aria-hidden="true"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropup<span class="caretup ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu dropup">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -54,7 +54,7 @@ body {
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-info" type="submit">Search</button>
         </form>
