--- a/site/4.3/examples/navbar-offcanvas/index.html
+++ b/site/4.3/examples/navbar-offcanvas/index.html
@@ -52,7 +52,7 @@ body {
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown mb-1 mb-lg-0">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
