--- a/test/visual/navbar.html
+++ b/test/visual/navbar.html
@@ -78,7 +78,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline my-1 my-md-0">
+        <form class="d-inline-flex my-1 my-md-0">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -111,7 +111,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline my-1 my-md-0">
+        <form class="d-inline-flex my-1 my-md-0">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -138,7 +138,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -146,7 +146,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -171,7 +171,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -179,7 +179,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -204,7 +204,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -212,7 +212,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -237,7 +237,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -245,7 +245,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -270,7 +270,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -284,7 +284,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -311,7 +311,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -319,7 +319,7 @@
                 </ul>
             </li>
         </ul>
-        <form class="form-inline">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
             <button class="btn btn-outline-primary" type="submit">Search</button>
         </form>
@@ -347,7 +347,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -355,7 +355,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -382,7 +382,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -390,7 +390,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -418,7 +418,7 @@
                 <a href="#" class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -448,7 +448,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -481,7 +481,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -489,7 +489,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="text" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -514,7 +514,7 @@
                     <a href="#" class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown <span class="caret"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
