--- a/site/4.3/examples/navbar-static-top/index.html
+++ b/site/4.3/examples/navbar-static-top/index.html
@@ -42,7 +42,7 @@ body {
                 <a class="nav-link disabled">Disabled</a>
             </li>
             <li class="nav-item dropdown">
-                <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                 <ul class="dropdown-menu">
                     <li><a href="#">Action</a></li>
                     <li><a href="#">Another action</a></li>
@@ -50,7 +50,7 @@ body {
                 </ul>
             </li>
         </ul>
-        <form class="form-inline ms-auto">
+        <form class="d-flex">
             <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
             <button class="btn btn-info" type="submit">Search</button>
         </form>
