--- a/site/4.3/examples/navbars/index.html
+++ b/site/4.3/examples/navbars/index.html
@@ -73,7 +73,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline my-1 my-md-0">
+            <form class="d-inline-flex my-1 my-md-0">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -106,7 +106,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline my-1 my-md-0">
+            <form class="d-inline-flex my-1 my-md-0">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -133,7 +133,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -141,7 +141,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -166,7 +166,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -174,7 +174,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -199,7 +199,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -207,7 +207,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -232,7 +232,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -240,7 +240,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -265,7 +265,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -273,7 +273,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline ms-auto">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -300,7 +300,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -308,7 +308,7 @@
                     </ul>
                 </li>
             </ul>
-            <form class="form-inline">
+            <form class="d-flex">
                 <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                 <button class="btn btn-outline-primary" type="submit">Search</button>
             </form>
@@ -336,7 +336,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
@@ -344,7 +344,7 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="form-inline ms-auto">
+                <form class="d-flex">
                     <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-primary" type="submit">Search</button>
                 </form>
@@ -372,7 +372,7 @@
                     <a class="nav-link disabled">Disabled</a>
                 </li>
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                    <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Action</a></li>
                         <li><a href="#">Another action</a></li>
@@ -402,7 +402,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
@@ -435,7 +435,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
@@ -443,7 +443,7 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="form-inline ms-auto">
+                <form class="d-flex">
                     <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-primary" type="submit">Search</button>
                 </form>
@@ -468,7 +468,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
@@ -501,7 +501,7 @@
                         <a class="nav-link disabled">Disabled</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
+                        <a class="nav-link d-inline-flex" href="#" data-cfw="dropdown">Dropdown<span class="caret ms-0_25" aria-hidden="true"></span></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Action</a></li>
                             <li><a href="#">Another action</a></li>
@@ -509,7 +509,7 @@
                         </ul>
                     </li>
                 </ul>
-                <form class="form-inline ms-auto">
+                <form class="d-flex">
                     <input class="form-control me-0_25" type="search" placeholder="Search" aria-label="Search">
                     <button class="btn btn-outline-primary" type="submit">Search</button>
                 </form>
