Modal: Use `h1` for `.modal-title` in examples

--- a/test/dev/testing.html
+++ b/test/dev/testing.html
@@ -543,7 +543,7 @@ $(window).ready(function() {
               <div class="modal-dialog">
                 <div class="modal-content">
                   <div class="modal-header">
-                    <h4 class="modal-title">Static backdrop modal</h4>
+                    <h1 class="modal-title fs-2xlarge">Static backdrop modal</h1>
                     <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                   </div>
                   <div class="modal-body">
@@ -574,7 +574,7 @@ $(window).ready(function() {
                 <div class="modal-dialog modal-dialog-centered">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Modal title</h4>
+                            <h1 class="modal-title fs-2xlarge">Modal title</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
@@ -592,11 +592,11 @@ $(window).ready(function() {
                 <div class="modal-dialog modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Modal title</h4>
+                            <h1 class="modal-title fs-2xlarge">Modal title</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
-                            <h4>Overflowing text to show scroll behavior</h4>
+                            <h2 class="fs-xlarge">Overflowing text to show scroll behavior</h2>
                             <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
                             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                             <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
@@ -622,11 +622,11 @@ $(window).ready(function() {
                 <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Modal title</h4>
+                            <h1 class="modal-title fs-2xlarge">Modal title</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
-                            <h4>Overflowing text to show scroll behavior</h4>
+                            <h2 class="fs-xlarge">Overflowing text to show scroll behavior</h2>
                             <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
                             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                             <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
@@ -659,7 +659,7 @@ $(window).ready(function() {
                 <div class="modal-dialog modal-sm">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Small modal</h4>
+                            <h1 class="modal-title fs-2xlarge">Small modal</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
@@ -678,24 +678,24 @@ $(window).ready(function() {
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Modal title</h4>
+                            <h1 class="modal-title fs-2xlarge">Modal title</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
-                            <h4>Text in a modal</h4>
+                            <h2 class="fs-xlarge">Text in a modal</h2>
                             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
-                            <h4>Popover in a modal</h4>
+                            <h2 class="fs-xlarge">Popover in a modal</h2>
                             <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
-                            <h4>Tooltips in a modal</h4>
+                            <h2 class="fs-xlarge">Tooltips in a modal</h2>
                             <p><a href="#" data-cfw="tooltip" title="Tooltip">This link</a> and <a href="#" data-cfw="tooltip" title="Tooltip">that link</a> should have tooltips on hover.</p>
-                            <h4>Collapse in a modal</h4>
+                            <h2 class="fs-xlarge">Collapse in a modal</h2>
                             <button type="button" class="btn" data-cfw="collapse" data-cfw-collapse-target="#modal_collapse">Collapse<span class="caret"></span></button>
                                 <div id="modal_collapse">
                                     <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                                 </div>
                             <hr>
-                            <h4>Dropdown in a modal</h4>
-                            <div class="dropdown">
+                            <h2 class="fs-xlarge">Dropdown in a modal</h2>
+                            <div class="dropdown mb-1">
                               <a href="#" role="button" data-cfw="dropdown">
                                 Dropdown<span class="caret ms-0_25"></span>
                               </a>
@@ -705,7 +705,7 @@ $(window).ready(function() {
                                 <li><a href="#">Something else here</a></li>
                               </ul>
                             </div>
-                            <h4>Overflowing text to show scroll behavior</h4>
+                            <h2 class="fs-xlarge">Overflowing text to show scroll behavior</h2>
                             <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
                             <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                             <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
@@ -740,7 +740,7 @@ $(window).ready(function() {
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Modal title</h4>
+                            <h1 class="modal-title fs-2xlarge">Modal title</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
@@ -779,7 +779,7 @@ $(window).ready(function() {
                 <div class="modal-dialog">
                     <div class="modal-content">
                         <div class="modal-header">
-                            <h4 class="modal-title">Dynamic Load Test</h4>
+                            <h1 class="modal-title fs-2xlarge">Dynamic Load Test</h1>
                             <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                         </div>
                         <div class="modal-body">
@@ -2217,24 +2217,24 @@ $(window).ready(function() {
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Modal title</h4>
+                <h1 class="modal-title fs-2xlarge">Modal title</h1>
                 <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             </div>
             <div class="modal-body">
                 <img src="" data-cfw="lazy" data-cfw-lazy-src="../../site/assets/4.3/img/test.gif" alt="test pattern" style="border: 1px solid blue;" class="img-fluid">
-                <h4>Text in a modal</h4>
+                <h2 class="fs-xlarge">Text in a modal</h2>
                 <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula.</p>
-                <h4>Popover in a modal</h4>
+                <h2 class="fs-xlarge">Popover in a modal</h2>
                 <p>This <button type="button"  class="btn" data-cfw="popover" title="A Title" data-cfw-popover-content="And here's some amazing content. It's very engaging. right?" data-cfw-popover-placement="forward">button</button> should trigger a popover on click.</p>
-                <h4>Tooltips in a modal</h4>
+                <h2 class="fs-xlarge">Tooltips in a modal</h2>
                 <p><a href="#" data-cfw="tooltip" title="Tooltip">This link</a> and <a href="#" data-cfw="tooltip" title="Tooltip">that link</a> should have tooltips on hover.</p>
-                <h4>Collapse in a modal</h4>
+                <h2 class="fs-xlarge">Collapse in a modal</h2>
                 <button type="button" class="btn" data-cfw="collapse" data-cfw-collapse-target="#modal_collapse2">Collapse<span class="caret"></span></button>
                     <div id="modal_collapse2">
                         <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                     </div>
                 <hr>
-                <h4>Overflowing text to show scroll behavior</h4>
+                <h2 class="fs-xlarge">Overflowing text to show scroll behavior</h2>
                 <p>Cras mattis consectetur purus sit amet fermentum. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
                 <p>Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor.</p>
                 <p>Aenean lacinia bibendum nulla sed consectetur. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Donec sed odio dui. Donec ullamcorper nulla non metus auctor fringilla.</p>
