--- a/test/visual/equalize.html
+++ b/test/visual/equalize.html
@@ -190,7 +190,7 @@
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">Nested Equalize</h4>
+                    <h1 class="modal-title fs-2xlarge">Nested Equalize</h1>
                     <button type="button" class="close" data-cfw-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
                 <div class="modal-body">
