Moda/Offcanvas: Add text-reset and font-size settings

--- a/test/visual/modal.html
+++ b/test/visual/modal.html
@@ -598,7 +598,7 @@
 
 <!-- modal will appear within this element and not document.body -->
 <div class="container my-1">
-  <div id="another-element" class="position-relative border mb-0_5" style="height: 300px; overflow-y:scroll;">
+  <div id="another-element" class="position-relative border mb-0_5 text-center" style="height: 300px; overflow-y:scroll;">
 <nav class="navbar navbar-expand-lg navbar-light bg-light flex-between sticky-top">
   <a href="#" class="navbar-brand">Navbar</a>
   <button class="navbar-toggle" type="button" data-cfw="collapse" data-cfw-collapse-target="#navbar1">
@@ -624,6 +624,10 @@
     </ul>
   </div>
 </nav>
+<p class="mt-1">
+    I am content that is centered by the container styles.
+</p>
+
     <!-- modal -->
     <div id="modal-root-example" class="modal">
       <div class="modal-dialog modal-dialog">
