--- a/test/visual/progress.html
+++ b/test/visual/progress.html
@@ -13,110 +13,116 @@
 <script src="../../dist/js/figuration.js"></script>
 
 <style>
-.progress + .progress {
+h2,
+:not(.progress-stacked) > .progress + .progress {
     margin-top: 1rem;
 }
 </style>
 
 </head>
-<body>
+<body class="pb-1">
 
 <div class="container">
     <h1>Progress</h1>
 
     <h2>Basic</h2>
 
-    <div class="mb-1">
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" aria-label="Example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-label="Example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-label="Example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 75%" aria-label="Example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 100%" aria-label="Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
+    <div class="progress" role="progressbar" aria-label="Example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 50%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 75%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 100%"></div>
     </div>
 
     <h2>With Labels</h2>
 
-    <div class="mb-1">
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 0%" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 50%" aria-label="Example with label" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">50%</div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 75%" aria-label="Example with label" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">75%</div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 100%" aria-label="Example with label" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">100%</div>
-        </div>
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 0%">0%</div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%">25%</div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 50%">50%</div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 75%">75%</div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example with label" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 100%">100%</div>
     </div>
 
     <h3>Colors</h3>
 
-    <div class="progress mb-1">
-        <div class="progress-bar" role="progressbar" style="width: 25%" aria-label="Default example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Default example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%"></div>
     </div>
-    <div class="progress mb-1">
-        <div class="progress-bar bg-primary" role="progressbar" style="width: 25%" aria-label="Primary example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Primary example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar bg-primary" style="width: 25%"></div>
     </div>
-    <div class="progress mb-1">
-        <div class="progress-bar bg-success" role="progressbar" style="width: 25%" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Success example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar bg-success" style="width: 25%"></div>
     </div>
-    <div class="progress mb-1">
-        <div class="progress-bar bg-info" role="progressbar" style="width: 50%" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Info example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar bg-info" style="width: 50%"></div>
     </div>
-    <div class="progress mb-1">
-        <div class="progress-bar bg-warning" role="progressbar" style="width: 75%" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Warning example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar bg-warning" style="width: 75%"></div>
     </div>
-    <div class="progress mb-1">
-        <div class="progress-bar bg-danger" role="progressbar" style="width: 100%" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Danger example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar bg-danger" style="width: 100%"></div>
     </div>
 
     <h2>Striped</h2>
+    <div class="progress" role="progressbar" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped" style="width: 10%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped bg-success" style="width: 25%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Info striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped bg-info" style="width: 50%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Warning striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped bg-warning" style="width: 75%"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Danger striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped bg-danger" style="width: 100%"></div>
+    </div>
 
-    <div class="progress mb-1">
-        <div class="progress-bar progress-bar-striped" role="progressbar" style="width: 10%" aria-label="Default striped example" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress mb-1">
-        <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 25%" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress mb-1">
-        <div class="progress-bar progress-bar-striped bg-info" role="progressbar" style="width: 50%" aria-label="Info striped example" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress mb-1">
-        <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 75%" aria-label="Warning striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-    </div>
-    <div class="progress mb-1">
-        <div class="progress-bar progress-bar-striped bg-danger" role="progressbar" style="width: 100%" aria-label="Danger striped example" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+    <h2>Animated</h2>
+
+    <div class="progress" role="progressbar" aria-label="Animated striped example" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar progress-bar-striped progress-bar-animated bg-primary" style="width: 75%"></div>
     </div>
 
     <h2>Stacked</h2>
 
-    <div class="mb-1">
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 15%" aria-label="Section one" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100"></div>
-            <div class="progress-bar progress-bar-striped bg-success" role="progressbar" style="width: 30%" aria-label="Section two" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100"></div>
-            <div class="progress-bar bg-info" role="progressbar" style="width: 20%" aria-label="Section three" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress-stacked">
+        <div class="progress" role="progressbar" aria-label="Segment one" aria-valuenow="15" aria-valuemin="0" aria-valuemax="100" style="width: 15%">
+            <div class="progress-bar"></div>
+        </div>
+        <div class="progress" role="progressbar" aria-label="Segment two" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100" style="width: 30%">
+            <div class="progress-bar progress-bar-striped bg-success"></div>
+        </div>
+        <div class="progress" role="progressbar" aria-label="Segment three" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%">
+            <div class="progress-bar bg-info"></div>
         </div>
     </div>
 
     <h2>Transition</h2>
 
-    <div class="progress">
-        <div id="transition-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-label="Tansition example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="progress" role="progressbar" aria-label="Tansition example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">
+        <div id="transition-bar" class="progress-bar" style="width: 0%;"></div>
     </div>
     <div class="form-group col-4 ps-0">
         <label for="transition-val">Transition value</label>
@@ -134,31 +140,29 @@
     $('#transition-val').on('change', function() {
         var val = $(this).val();
         $('#transition-bar')
-            .attr('aria-valuenow', val)
-            .css('width', val + '%');
+            .css('width', val + '%')
+            .parent()
+            .attr('aria-valuenow', val);
     });
     </script>
 
-    <h2>Custom Size</h2>
+    <h2>Custom Height</h2>
 
-    <div class="mb-1">
-        <div class="progress" style="height: 5px;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-label="Example with 5px height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress" style="height: 25px;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-label="Example with 25px height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
-        </div>
-        <div class="progress">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-label="Example with default height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-        <div class="progress" style="height: 1.5rem;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-label="Example with 1.5rem height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
-        <div class="progress" style="height: 3rem;">
-            <div class="progress-bar" role="progressbar" style="width: 25%;" aria-label="Example with 3rem height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">25%</div>
-        </div>
+    <div class="progress" role="progressbar" style="height: 5px;" aria-label="Example with 5px height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%;"></div>
     </div>
-
+    <div class="progress" role="progressbar" style="height: 25px;" aria-label="Example with 25px height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%;"></div>
+    </div>
+    <div class="progress" role="progressbar" aria-label="Example with default height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%;">25%</div>
+    </div>
+    <div class="progress" role="progressbar" style="height: 1.5rem;" aria-label="Example with 1.5rem height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%;">25%</div>
+    </div>
+    <div class="progress" role="progressbar" style="height: 3rem;" aria-label="Example with 3rem height" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
+        <div class="progress-bar" style="width: 25%;">25%</div>
+    </div>
 
 </div>
 
